--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             font-size: 18px;
             display: flex;
             flex-direction: column;
+            margin: 0;
         }
 
         h1{
